--- a/client-server/style.css
+++ b/client-server/style.css
@@ -1,4 +1,8 @@
 body {
+    background-image: url("../images/titanic.jpg");
+    background-size: cover; /* Resmi ekran boyutuna sığacak şekilde ölçekle */
+    background-position: center; /* Resmi ortala */
+    background-repeat: no-repeat; /* Tekrarlamayı engelle */
     font-family: Arial, sans-serif;
     background-color: #000000;
     margin: 0;
@@ -7,40 +11,75 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+
 }
 
-form {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 300px;
+#videoBackground {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
 }
+
+#content {
+    position: relative;
+    z-index: 1;
+}
+
+
+
+
+form {
+    background-color: rgba(151, 81, 0, 0.4);
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    width: 750px; /* Formun genişliğini ekranın genişliği kadar yapar */
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    margin-left: auto; /* Formu sola almak için */
+    margin-right: auto; /* Formu sola almak için */
+    
+}
+
+
 
 
 label {
     display: flex;
     margin-bottom: 8px;
-    font-weight: bold;
+    font-weight: bolder;
+    color: rgb(255, 255, 255);
+    
 }
 
 
 input, select {
     width: 100%;
-    padding: 8px;
+    padding: 10px;
     margin-bottom: 16px;
     box-sizing: border-box;
 }
 
 button {
-    background-color: #4caf50;
+    margin: 0 auto; /* Butonu yatayda ortalar */
+    background-color: #572b02;
     color: #fff;
     padding: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    width: 100%;
+    height: auto;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #4553a0;
 }
+
+
