--- a/client-server/style.css
+++ b/client-server/style.css
@@ -38,7 +38,7 @@ form {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
     padding: 20px;
-    width: 25%; /* Formun genişliğini ekranın genişliği kadar yapar */
+    width: 35%; /* Formun genişliğini ekranın genişliği kadar yapar */
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -63,7 +63,7 @@ label {
     
 }
 
-label[for="Title"] {
+label[for="passenger"] {
     font-size: 40px; /* Font büyüklüğünü istediğiniz değere ayarlayabilirsiniz */
     font-family: cursive;
     margin-bottom: 20px;
@@ -86,7 +86,7 @@ input, select {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 20%;
+    width: 25%;
     height: auto;
 
 }
@@ -110,3 +110,20 @@ button:hover {
 }
 
 
+#title {
+    color: #ffffff; /* Yazı rengi */
+    font-size: 200px; /* Font boyutu */
+    text-align: center; /* Yazıyı ortala */
+    letter-spacing: 4px; /* Harfler arası boşluk */
+    margin-right: auto; /* Sağa boşluk */
+    font-family: cursive; /* Font ailesi */
+}
+
+#output {
+    color: #ffffff; /* Yazı rengi */
+    font-size: 140px; /* Font boyutu */
+    text-align: center; /* Yazıyı ortala */
+    letter-spacing: 4px; /* Harfler arası boşluk */
+    margin-right: auto; /* Sağa boşluk */
+    font-family: cursive; /* Font ailesi */
+}
