--- a/client-server/style.css
+++ b/client-server/style.css
@@ -1,129 +1,124 @@
 body {
-    background-image: url("../images/titanic.jpg");
-    background-size: cover; /* Resmi ekran boyutuna sığacak şekilde ölçekle */
-    background-position: center; /* Resmi ortala */
-    background-repeat: no-repeat; /* Tekrarlamayı engelle */
-    font-family: Arial, sans-serif;
-    background-color: #000000;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-
+  background-image: url("../images/titanic.jpg");
+  background-size: cover; /* Resmi ekran boyutuna sığacak şekilde ölçekle */
+  background-position: center; /* Resmi ortala */
+  background-repeat: no-repeat; /* Tekrarlamayı engelle */
+  font-family: Arial, sans-serif;
+  background-color: #000000;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 #videoBackground {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
 }
 
 #content {
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 }
 
-
-
-
-form {
+/* form {
     background-color: rgba(151, 81, 0, 0.4);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
     padding: 20px;
-    width: 35%; /* Formun genişliğini ekranın genişliği kadar yapar */
+    width: 35%; /* Formun genişliğini ekranın genişliği kadar yapar *
     display: flex;
     flex-direction: column;
     align-items: center; 
-    margin-left: auto; /* Formu sola almak için */
-    margin-right: auto; /* Formu sola almak için */
+    margin-left: auto; /* Formu sola almak için *
+    margin-right: auto; /* Formu sola almak için *
     
+} */
+::-webkit-scrollbar {
+  display: none;
 }
-
-
 #song {
-    font-size: 1px; /* Butonun yazı boyutunu ayarla */
-    padding: 10px ; /* Butonun iç boşluğunu ayarla */
-    display: none;
+  font-size: 1px; /* Butonun yazı boyutunu ayarla */
+  padding: 10px; /* Butonun iç boşluğunu ayarla */
+  display: none;
 }
-
+.form-text {
+  color: rgb(122, 109, 109);
+  font-family: cursive;
+}
 label {
-    display: flex;
-    margin-bottom: 8px;
-    font-weight: bolder;
-    color: rgb(255, 255, 255);
-    font-family: cursive;
-    
+  display: flex;
+  margin-bottom: 8px;
+  font-weight: bolder;
+  color: rgb(122, 109, 109);
+  font-family: cursive;
 }
 
 label[for="passenger"] {
-    font-size: 40px; /* Font büyüklüğünü istediğiniz değere ayarlayabilirsiniz */
-    font-family: cursive;
-    margin-bottom: 20px;
-
+  font-size: 40px; /* Font büyüklüğünü istediğiniz değere ayarlayabilirsiniz */
+  font-family: cursive;
+  margin-bottom: 20px;
 }
 
-
-input, select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
+input,
+select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
 }
 
 #song_button {
-    margin: 0 auto; /* Butonu yatayda ortalar */
-    background-color: #fff;
-    color: #572b02;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 25%;
-    height: auto;
-
+  margin: 0 auto; /* Butonu yatayda ortalar */
+  background-color: #fff;
+  color: #572b02;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 25%;
+  height: auto;
 }
 
-
 button {
-    display: block;
-    margin: 0 auto; /* Butonu yatayda ortalar */
-    background-color: #572b02;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100%;
-    height: auto;
+  display: block;
+  margin: 0 auto; /* Butonu yatayda ortalar */
+  background-color: #572b02;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+  height: auto;
 }
 
 button:hover {
-    background-color: #4553a0;
+  background-color: #4553a0;
 }
 
-
 #title {
-    color: #ffffff; /* Yazı rengi */
-    font-size: 200px; /* Font boyutu */
-    text-align: center; /* Yazıyı ortala */
-    letter-spacing: 4px; /* Harfler arası boşluk */
-    margin-right: auto; /* Sağa boşluk */
-    font-family: cursive; /* Font ailesi */
+  color: #ffffff; /* Yazı rengi */
+  font-size: 200px; /* Font boyutu */
+  text-align: center; /* Yazıyı ortala */
+  letter-spacing: 4px; /* Harfler arası boşluk */
+  margin-right: auto; /* Sağa boşluk */
+  font-family: cursive; /* Font ailesi */
 }
 
 #output {
-    color: #ffffff; /* Yazı rengi */
-    font-size: 140px; /* Font boyutu */
-    text-align: center; /* Yazıyı ortala */
-    letter-spacing: 4px; /* Harfler arası boşluk */
-    margin-right: auto; /* Sağa boşluk */
-    font-family: cursive; /* Font ailesi */
+  color: #ffffff; /* Yazı rengi */
+  font-size: 140px; /* Font boyutu */
+  text-align: center; /* Yazıyı ortala */
+  letter-spacing: 4px; /* Harfler arası boşluk */
+  margin-right: auto; /* Sağa boşluk */
+  font-family: cursive; /* Font ailesi */
 }
